v3/crates/engine/tests/snapshots/execution__common__rowsets_execute__commands__functions__object_array_output_type__output_permissions.snap
---
source: crates/engine/tests/common.rs
expression: rowsets
---
[
  {
    "rows": [
      {
        "__value": [
          {
            "actor_id": 0,
            "name": "Peter",
            "movie_id": 2
          },
          {
            "actor_id": 1,
            "name": "Leonardo DiCaprio",
            "movie_id": 1
          },
          {
            "actor_id": 2,
            "name": "Kate Winslet",
            "movie_id": 1
          },
          {
            "actor_id": 3,
            "name": "Irfan Khan",
            "movie_id": 2
          },
          {
            "actor_id": 4,
            "name": "Al Pacino",
            "movie_id": 3
          },
          {
            "actor_id": 5,
            "name": "Robert De Niro",
            "movie_id": 3
          },
          {
            "actor_id": 6,
            "name": "Morgan Freeman",
            "movie_id": 4
          },
          {
            "actor_id": 7,
            "name": "Ben Kingsley",
            "movie_id": 5
          }
        ]
      }
    ]
  }
]
